# enterprise-agentic-systems

./: .gitignore  Explore.ipynb  README.md  lesson_02_cleaning_and_loading.ipynb  lesson_03_api_design.ipynb  pyproject.toml
a2a/: lesson_05_a2a.ipynb
agent/: lesson_05_agents.ipynb
api/: lesson_03_api_design.ipynb
data/: database.db
docs/: lesson_3_api.yaml  openapi.yaml
mcp/: lesson_04_mcp_tools.ipynb
opensearch/: docker-compose.yml
utils/: models.py  reference_data.py  training_recommender.py
