[project]
name = "enterprise-agentic-systems"
version = "0.1.0"
description = "Enterprise Agentic Systems: From Data to Deployment — training workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
    "opensearch-py>=2.4.0",
    "opensearch-dsl>=2.1.0",
    "httpx>=0.28.1",
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "uvicorn>=0.46.0",
    "fastmcp>=3.2.4",
    "python-dotenv>=1.2.2",
    "openai-agents>=0.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "api"]
